@@ -86,6 +86,7 @@
             total_size: "Total Size",
             hide: "Hide",
             show: "Show",
+			view: "View",
             buy: "Buy",
             store_transactions: "Store Transactions",
             game_transactions: "Game Transactions",
@@ -100,6 +101,7 @@
 			games_all: "All Games",
 			games_discount: "Games With Discounts",
             badges_drops: "Badges With Card Drops Remaining",
+			binder_view: "Binder View",
             sales_total: "Sales total",
             purchase_total: "Purchase total",
             net_gain: "Net gain",
