@@ -4,6 +4,7 @@ v4.7
 + Adds ability to hide Early Access games from the New Releases list on homepage
 + Adds new tag: "friends own" which tags each game with the number of your friends that own it
 + Adds "Games" link to username header
++ Adds "Binder View" to badge progress page 
 
 v4.6
 -----
